# encryptorm

./: .gitignore  pyproject.toml
encryptorm/: aencryptorm.py
